<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/countdown_text_title"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:ellipsize="end"
    android:singleLine="true"
    android:text="@string/placeholder"
    android:textAlignment="center"
    android:textColor="@color/accent"
    android:textSize="24sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/countdown_text_date"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:textAlignment="center"
    android:text="@string/placeholder"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/countdown_text_title"/>

  <ProgressBar
    android:id="@+id/countdown_progress"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/countdown_text_progress"
    app:layout_constraintTop_toBottomOf="@id/countdown_text_date"/>

  <TextView
    android:id="@+id/countdown_text_progress"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:textColor="@color/accent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/countdown_progress"
    app:layout_constraintTop_toTopOf="@id/countdown_progress"
    app:layout_constraintBottom_toBottomOf="@id/countdown_progress"/>

  <TextView
    android:id="@+id/countdown_text_remaining"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:text="@string/time_remaining"
    android:textAlignment="center"
    android:textSize="18sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/countdown_progress" />

  <EditText
    android:id="@+id/countdown_edit_remaining_days"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:autofillHints=""
    android:ellipsize="end"
    android:enabled="false"
    android:hint="@string/hint_days_remaining"
    android:inputType="text"
    android:singleLine="true"
    android:textAlignment="center"
    android:textColor="@color/accent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/countdown_text_remaining" />

  <EditText
    android:id="@+id/countdown_edit_remaining_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:autofillHints=""
    android:enabled="false"
    android:hint="@string/time_remaining"
    android:inputType="text"
    android:singleLine="true"
    android:textAlignment="center"
    android:textColor="@color/accent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/countdown_edit_remaining_days" />

  <TextView
    android:id="@+id/countdown_text_created"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/event_created"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>

  <TextView
    android:id="@+id/countdown_text_created_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:textColor="@color/accent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>